# sokoban-world-rl

./: README.md  pyproject.toml  requirements.txt  run_experiment.py  test_implementation.py
analysis/: __init__.py  visualization.py
configs/: train.yaml
dreamer/: world_model.py
dreamer-sokoban/: QUICKSTART.md  README.md  plan.txt  run_experiment.py  setup.py  test_implementation.py
dreamer-sokoban/configs/: experiment.yaml
dreamer-sokoban/notebooks/: exploration.ipynb
dreamer-sokoban/src/: train.py
dreamer-sokoban/src/analysis/: evaluation.py
dreamer-sokoban/src/dreamer/: agent.py
environments/: sokoban_wrapper.py
