[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamer-sokoban"
version = "0.1.0"
description = "DreamerV3 implementation for Sokoban puzzle solving"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "DreamerSokoban Research Team" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "gymnasium>=0.28.1",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "gym-sokoban",
    "griddly",
    "wandb",
    "tensorboard",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "seaborn",
    "plotly",
    "pandas",
    "scipy",
    "einops",
    "tensordict",
    "stable-baselines3",
    "tqdm",
    "pillow",
    "opencv-python",
    "imageio",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/ayushsi42/sokoban-world-rl"
Repository = "https://github.com/ayushsi42/sokoban-world-rl"

[tool.setuptools]
packages = { find = {} }
py-modules = ["train"]
